# SparseMate

./: .env  README.md  chess_heatmap.py  feature_evaluator.py  new_entrypoint.sh  probity_test.py  provision.sh  test.ipynb
SAE_Models/: autoencoders.py
SparseMate_App/: app.py  chess_heatmap.py
data_tools/: feature_evaluator.py  puzzles.py
datasets/: __init__.py
dictionary_learning/: README.md  pyproject.toml
dictionary_learning/src/: __init__.py  training.py  utils.py
dictionary_learning/src/dictionary_learning/: __init__.py  buffer.py  dictionary.py  training.py  utils.py
dictionary_learning/src/dictionary_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dictionary_learning/src/dictionary_learning/trainers/: __init__.py  attention_seeking.py  batch_top_k.py  gated_anneal.py  gdm.py  gogs.py  jumprelu.py  matryoshka_batch_top_k.py  p_anneal.py  standard.py  top_k.py  trainer.py
dictionary_learning/src/trainers/: batch_top_k.py  gated_anneal.py  gdm.py  jumprelu.py  matryoshka_batch_top_k.py  p_anneal.py  standard.py  top_k.py
dictionary_learning/tests/: test_end_to_end.py
feature_analysis/: distance_metric.py  elementwise_analysis.py
leela-interp/: pyproject.toml
model_tools/: truncated_leela.py
my_datasets/: __init__.py  datasetsAPI.py
scripts/: groupFeatures.py  test.py  trainSAE.py
templates/: index.html
training_scripts/: activation_buffer.py  criterion.py  data_embedding_map.py  groupFeatures.py  trainLinProbe.py  trainSAE.py  train_event_logging.py  training.py  training_configuration.py  training_loop.py
(+29 files in other folders)
