[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dictionary_learning"
version = "0.1.0"

readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "circuitsvis>=1.43.2",
    "datasets>=2.18.0",
    "einops>=0.7.0",
    "matplotlib>=3.8.3",
    "nnsight>=0.3.0",
    "pandas>=2.2.1",
    "plotly>=5.18.0",
    "torch>=2.1.2",
    "tqdm>=4.66.1",
    "umap-learn>=0.5.6",
    "zstandard>=0.22.0",
    "wandb>=0.12.0",
    "pytest>=6.2.4"
]
